<resources>
    <string name="app_name">intentsProj</string>
    <string name="txt1"> Number 1 </string>
    <string name="txt2"> Number 2 </string>
    <string name="btn1"> OK </string>
    <string name="txtBx1"></string>
    <string name="txtBx2"></string>

    <string name="txt3"> Number 1 </string>
    <string name="txt4"> Number 2 </string>
    <string name="btn2"> + </string>
    <string name="btn3"> - </string>
    <string name="btn4"> * </string>
    <string name="btn5"> / </string>
    <string name="txtBx3"></string>
    <string name="txtBx4"></string>
    <string name="txtFV"></string>


</resources>