<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".firstActivity">

    <EditText
        android:id="@+id/txtBx2"
        android:layout_width="181dp"
        android:layout_height="38dp"
        android:hint="@string/txtBx2"
        android:inputType="number"
        android:textAlignment="inherit"
        android:textColor="#673AB7"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.769"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.357"
        tools:text="@string/txtBx2" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="97dp"
        android:layout_height="30dp"
        android:fontFamily="@font/acme"
        android:text="@string/txt1"
        android:textAlignment="center"
        android:textColor="#009688"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273" />

    <EditText
        android:id="@+id/txtBx1"
        android:layout_width="181dp"
        android:layout_height="38dp"
        android:hint="@string/txtBx1"
        android:inputType="number"
        android:textAlignment="inherit"
        android:textColor="#673AB7"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.769"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.265"
        tools:text="@string/txtBx1" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="97dp"
        android:layout_height="30dp"
        android:fontFamily="@font/acme"
        android:text="@string/txt2"
        android:textAlignment="center"
        android:textColor="#009688"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.365" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="80dp"
        android:layout_height="41dp"
        android:text="@string/btn1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.723" />


</androidx.constraintlayout.widget.ConstraintLayout>